[gd_scene load_steps=24 format=2]

[ext_resource path="res://assets/sprites/zombie/left_right.png" type="Texture" id=1]
[ext_resource path="res://src/enemy/Enemy.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/zombie/up.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/boss/down.png" type="Texture" id=4]
[ext_resource path="res://src/util/DamagePlayer.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/util/TextureProgress.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/sounds/zombie-20.wav" type="AudioStream" id=7]

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 49, 80 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 49, 0, 49, 80 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 98, 0, 49, 80 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 147, 0, 49, 80 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 49, 80 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 49, 0, 49, 80 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 98, 0, 49, 80 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 147, 0, 49, 80 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 72, 122 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 72, 0, 72, 122 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 144, 0, 72, 122 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 216, 0, 72, 122 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 288, 0, 72, 122 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "up",
"speed": 5.0
}, {
"frames": [ SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": true,
"name": "left_right",
"speed": 5.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "down",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 26, 43 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 35, 43 )

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 6
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
animation = "left_right"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="AreaDamage" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDamage"]
self_modulate = Color( 0.14902, 0, 1, 1 )
shape = SubResource( 7 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="DamagePlayer" parent="." instance=ExtResource( 5 )]

[node name="TextureProgress" parent="." instance=ExtResource( 6 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -25.0
autoplay = true
[connection signal="body_entered" from="AreaDamage" to="." method="_on_AreaDamage_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
